[#124] add .status.scaleLabelSelector to fill out subresource for potential use with HPA

--- a/bundle/manifests/broker.amq.io_activemqartemises.yaml
+++ b/bundle/manifests/broker.amq.io_activemqartemises.yaml
@@ -2350,6 +2350,8 @@ spec:
                       type: string
                     type: array
                 type: object
+              scaleLabelSelector:
+                type: string
               upgrade:
                 properties:
                   majorUpdates:
@@ -2378,6 +2380,7 @@ spec:
     storage: true
     subresources:
       scale:
+        labelSelectorPath: .status.scaleLabelSelector
         specReplicasPath: .spec.deploymentPlan.size
         statusReplicasPath: .status.deploymentPlanSize
       status: {}
