[#574] Use k8s jobs to do scaledown

--- a/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
@@ -2094,6 +2094,14 @@ spec:
           verbs:
           - update
         - apiGroups:
+          - batch
+          resources:
+          - jobs
+          verbs:
+          - create
+          - delete
+          - list
+        - apiGroups:
           - broker.amq.io
           resources:
           - activemqartemisaddresses
