--- a/deploy/cluster_role.yaml
+++ b/deploy/cluster_role.yaml
@@ -39,6 +39,14 @@ rules:
   verbs:
   - update
 - apiGroups:
+  - batch
+  resources:
+  - jobs
+  verbs:
+  - create
+  - delete
+  - list
+- apiGroups:
   - broker.amq.io
   resources:
   - activemqartemisaddresses
