--- a/bundle/manifests/broker.amq.io_activemqartemises.yaml
+++ b/bundle/manifests/broker.amq.io_activemqartemises.yaml
@@ -2435,6 +2435,11 @@ spec:
                     type: boolean
                   securityUpdates:
                     type: boolean
+                required:
+                - majorUpdates
+                - minorUpdates
+                - patchUpdates
+                - securityUpdates
                 type: object
               version:
                 properties:
