--- a/deploy/crds/broker_activemqartemis_crd.yaml
+++ b/deploy/crds/broker_activemqartemis_crd.yaml
@@ -1602,6 +1602,11 @@ spec:
                     type: boolean
                   securityUpdates:
                     type: boolean
+                required:
+                - majorUpdates
+                - minorUpdates
+                - patchUpdates
+                - securityUpdates
                 type: object
               version:
                 properties:
