[#616] Restrict manager container security context
Drop all cpabilities and set seccomp profile to RuntimeDefault to avoid the
warning: would violate PodSecurity "restricted:v1.24"

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -107,6 +107,11 @@ spec:
           periodSeconds: 10
         securityContext:
           allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
+          seccompProfile:
+            type: RuntimeDefault
       securityContext:
         runAsNonRoot: true
       serviceAccountName: activemq-artemis-controller-manager
