--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -152,6 +152,13 @@ rules:
   - get
   - list
 - apiGroups:
+  - cert-manager.io
+  resources:
+  - certificates
+  verbs:
+  - list
+  - watch
+- apiGroups:
   - monitoring.coreos.com
   resources:
   - servicemonitors
