--- a/bundle/manifests/broker.amq.io_activemqartemises.yaml
+++ b/bundle/manifests/broker.amq.io_activemqartemises.yaml
@@ -125,6 +125,9 @@ spec:
                       description: If prevents advisory addresses/queues to be registered
                         to management service, default false
                       type: boolean
+                    trustSecret:
+                      description: The name of the truststore secret.
+                      type: string
                     trustStoreProvider:
                       description: Provider used for the truststore; "SUN", "SunJCE",
                         etc. Default in broker is null
@@ -539,6 +542,9 @@ spec:
                     sslSecret:
                       description: Name of the secret to use for ssl information
                       type: string
+                    trustSecret:
+                      description: The name of the truststore secret.
+                      type: string
                     trustStoreProvider:
                       description: Provider used for the truststore; "SUN", "SunJCE",
                         etc. Default in broker is null
@@ -597,6 +603,9 @@ spec:
                     type: boolean
                   sslSecret:
                     description: Name of the secret to use for ssl information
+                    type: string
+                  trustSecret:
+                    description: The name of the truststore secret.
                     type: string
                   useClientAuth:
                     description: If the embedded server requires client authentication
