--- a/deploy/activemq-artemis-operator.yaml
+++ b/deploy/activemq-artemis-operator.yaml
@@ -445,6 +445,9 @@ spec:
                     suppressInternalManagementObjects:
                       description: If prevents advisory addresses/queues to be registered to management service, default false
                       type: boolean
+                    trustSecret:
+                      description: The name of the truststore secret.
+                      type: string
                     trustStoreProvider:
                       description: Provider used for the truststore; "SUN", "SunJCE", etc. Default in broker is null
                       type: string
@@ -755,6 +758,9 @@ spec:
                     sslSecret:
                       description: Name of the secret to use for ssl information
                       type: string
+                    trustSecret:
+                      description: The name of the truststore secret.
+                      type: string
                     trustStoreProvider:
                       description: Provider used for the truststore; "SUN", "SunJCE", etc. Default in broker is null
                       type: string
@@ -799,6 +805,9 @@ spec:
                     type: boolean
                   sslSecret:
                     description: Name of the secret to use for ssl information
+                    type: string
+                  trustSecret:
+                    description: The name of the truststore secret.
                     type: string
                   useClientAuth:
                     description: If the embedded server requires client authentication
